SVY-13415 fix add repo select UI on IE

--- a/com.servoy.eclipse.designer.wpm/node/src/styles.css
+++ b/com.servoy.eclipse.designer.wpm/node/src/styles.css
@@ -42,14 +42,14 @@ mat-tab-header, .mat-tab-label-content {
 
 mat-select.repository {
   width: unset;
+  padding-top: 10px;
 }
 
 mat-select.repository .mat-select-value {
   color: #fff;
-  max-width: initial;
+  max-width: none;
 }
 
 mat-select.repository .mat-select-arrow {
   color: #fff;
 }
-
